Fixed layout bugs

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -7,25 +7,31 @@ h1 {
     font-size: 72px;
     text-align: center;
     color: #A5CFE2;
-    letter-spacing: 2px;
     text-decoration: none}
+#title{
+    letter-spacing: 2px;
+}
+h2{
+    text-align: center;}
+.title{
+    font-family: 'Montserrat', sans-serif;
+    color: #A5CFE2;
+    font-size: 40px;}
 .rower{
+    font-family: 'Montserrat', sans-serif;
     color: #4464AD ;
     font-size: 54px;
     margin-top: 12px;
     margin-bottom: 12px;}
-h2{
-    text-align: center;}
-h2.title{
-    font-family: 'Montserrat', sans-serif;
-    color: #A5CFE2;
-    font-size: 40px;}
 h3 {
     text-align: center;
     color: #A5CFE2;}
 
+a{
+    text-decoration: none;
+}
 a:visited { text-decoration: none; color: #4464AD; }
-a:hover { text-decoration: none; color: #4464AD; }
+a:hover { text-decoration: underline; color: #4464AD; }
 a:focus { text-decoration: none; color: #4464AD; }
 a:active { text-decoration: none; color: #4464AD; }
 a#title { color: #A5CFE2; }
@@ -46,6 +52,12 @@ button {
     border: 2px solid #4464AD;
     color: #F7F9F9;
     text-decoration:none;
+}
+
+img {
+    width: 810px;
+    height: 540px;
+    align: right;
 }
 
 table {
@@ -102,6 +114,7 @@ div{}
 }
 .table-chart{
     text-align: center;
+    max-width: 100%;
 }
 .table{
     display: inline-block;
@@ -119,11 +132,42 @@ div{}
     margin: auto 15%;
 }
 
-span{
+div > p > span{
     font-family: Helvetica, sans-serif;
     font-size: 28px;
     color: #A5CFE2;
 }
 .category{
     color: #4464AD;
+}
+
+@media screen and (max-width: 1024px){
+    h2.rower{
+        font-size: 48px;
+    }
+    div > p >span{
+        font-size: 20px;
+    }
+    h1#title{
+        font-size: 60px;
+    }
+    img {
+        width: 630px;
+        height: 420px;
+    }
+}
+@media screen and (max-width: 640px){
+    h2.rower{
+        font-size: 24px;
+    }
+    div > p >span{
+        font-size: 16px;
+    }
+    h1#title{
+        font-size: 48px;
+    }
+    img {
+        width: 300px;
+        height: 200px;
+    }
 }
